# faac

./: CMakeLists.txt
cmake/: libfaacConfig.cmake.in
libfaac/: version.h
